1.5/files/backend-multitool-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-multitool-deployment
  labels:
    app: backend-multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-multitool
  template:
    metadata:
      labels:
        app: backend-multitool
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool:minimal
        ports:
        - name: http-backend
          containerPort: 80
