1.5/files/frontend-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-nginx-deployment
  labels:
    app: frontend-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-nginx
  template:
    metadata:
      labels:
        app: frontend-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.28.0
        ports:
        - name: http-frontend
          containerPort: 80
