1.5/files/backend-multitool-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-multitool-svc
spec:
  selector:
    app: backend-multitool
  ports:
  - name: http-backend
    port: 80
    protocol: TCP
    targetPort: http-backend
  type: ClusterIP
