1.5/files/frontend-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nginx-svc
spec:
  selector:
    app: frontend-nginx
  ports:
  - name: http-frontend
    port: 80
    protocol: TCP
    targetPort: http-frontend
  type: ClusterIP
