1.5/files/frontend-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-nginx-svc
            port: 
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-multitool-svc
            port: 
              number: 80
